# pyfiles_db

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  security_vulnerability_report.md
.github/workflows/: check-code.yml  publish.yml
src/pyfiles_db/: __init__.py  files_db.py
src/pyfiles_db/database_manager/: __init__.py  _db.py  async_db.py  meta.py  sync_bd.py  sync_db.py
src/pyfiles_db/errors/: __init__.py  eror_path_not_avaible.py  error_data_is_uncorrect.py  error_db_not_loaded.py  error_not_found.py  error_unknown_data_type.py  table_already_exist.py
src/pyfiles_db/utils/: __init__.py  infinity_number_generator.py
tests/: __init__.py  conftest.py  test_creaet_table.py  test_db_find.py  test_deleate_file.py  test_init_storege.py  test_simple.py  test_update.py
